WebJET CMS integration of displaytag